# shapeless-rust

./: README.md  example.rs
shapeless/: Cargo.toml
shapeless/src/: lib.rs
