[package]
name = "shapeless"
description = "Shapeless package that transforms types into shapelessness"
version = "0.1.1"
authors = ["Kye Gomez kye@apac.ai"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kyegomez/shapeless-rust"
keywords = ["shapeless", "types", "rust"]

[dependencies]